# parquet-analyzer

./: .gitignore  Makefile  README.md  TESTING.md  check_test_status.py  pyproject.toml  setup_tests.py
examples/: demo_tui.py
examples/demo_files/: complex_nested.parquet  financial_data.parquet
examples/test_files_multirow/: large_multi_rowgroup.parquet  medium_multi_rowgroup.parquet  small_multi_rowgroup.parquet
parquet_analyzer/: __init__.py  analyzer.py  cli.py  tui.py
tests/: README.md  __init__.py  debug_content_display.py  debug_full_flow.py  run_tests.py  test_all_data_panels.py  test_arrow_key_fix.py  test_basic_functionality.py  test_complex_display.py  test_compression_fix.py  test_compression_minimal.py  test_compression_navigation.py  test_data_pagination.py  test_data_panel.py  test_data_panel_detailed.py  test_jk_navigation.py  test_navigation.py  test_parquet_analyzer.py  test_rowgroup_column_navigation.py
tests/debug/: debug_data_error.py  debug_data_view.py  debug_edge_cases.py  debug_formatting.py  debug_keys.py  debug_terminal_sizes.py
tests/test_data/: create_large_test.py  create_multi_rowgroup_test.py  create_orderbook_test.py
