[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parquet-analyzer"
version = "0.1.0"
description = "Interactive TUI for analyzing Parquet file metadata, compression, and optimization"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["parquet", "analysis", "compression", "tui", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Utilities",
]

dependencies = [
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
parquet-analyzer = "parquet_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/parquet-analyzer"
Repository = "https://github.com/yourusername/parquet-analyzer"
Issues = "https://github.com/yourusername/parquet-analyzer/issues"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=parquet_analyzer --cov-report=html --cov-report=term-missing"
